[tool.poetry]
name = "pdfprod"
version = "0.1.0"
description = ""
authors = ["Brian Koech <brightkoech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pikepdf = "^7.2.0"
pdf2image = "^1.16.3"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
